--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ first div in the grid  and place it in the grid. */
 .container div:first-child {
   grid-column: 1 / -1;
   background-attachment: fixed; 
-  background-image: url(".../images/header.jpg");
+  background-image: url("/images/header.jpg");
   background-repeat: no-repeat;
 
 }
